Add function: delete group and add group.

--- a/src/main/webapp/static/style.css
+++ b/src/main/webapp/static/style.css
@@ -36,7 +36,8 @@ body {
     margin-top: 10px;
     width: 250px;
     padding: 0 10px; /* Отступы вокруг текста */
-    font-size: 16px;
+    font: 18px "Segoe Script";
+    font-style: italic;
 }
 
 /* Middle
