Add check login

--- a/src/main/webapp/static/style.css
+++ b/src/main/webapp/static/style.css
@@ -65,6 +65,36 @@ body {
     text-align: center;
 }
 
+/* Добавлено Минеевой Ю.Н. ниже*/
+.login {
+    padding: 10px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.dashboard {
+    padding: 10px;
+    font-size: 18px;
+    text-align: center;
+}
+
+label, input[type=text] {
+    display: inline-block;
+    vertical-align: middle;
+    horiz-align: center;
+}
+
+label {
+    width: 120px;
+    text-align: right;
+}
+
+input[type=text] {
+    width: 49%;
+}
+
+/* Добавлено Минеевой Ю.Н. выше*/
+
 /* Footer
 -----------------------------------------------------------------------------*/
 .footer {
