--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -129,6 +129,12 @@ H2 {
     horiz-align: center;
 }
 
+.form_lesson_delete {
+    vertical-align: middle;
+    horiz-align: center;
+    text-align: center;
+}
+
 .registr_content {
     width: 100%;
     font-size: 16px;
