--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -133,6 +133,13 @@ H2 {
     vertical-align: middle;
     horiz-align: center;
     text-align: center;
+    font-size: 16px;
+}
+
+.form_lesson_add {
+    padding: 10px;
+    font-size: 16px;
+    text-align: center;
 }
 
 .registr_content {
